methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:28: error: ';' expected but 'else' found.
  else{
  ^SlugHunting:37: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:54: error: Unmatched closing brace '}' ignored here
}
^